# dev_python

./: .coveragerc  .gitattributes  .gitignore  Makefile  Pipfile  README.md  project.env  pyproject.toml  run_coverage.sh  run_pip_install.sh  run_pip_install_dev.sh  run_pip_remove_env.sh  run_pipenv.sh  run_poetry.sh  run_poetry_install.sh  run_poetry_install_dev.sh  run_poetry_remove_env.sh  run_tests.sh  simple_test.py  test-dict-extension.py  test-dict2csv.py  test-exec.py
gv/: hello-world.gv
makefiles/: 00.ansi.mk  00.os.mk  01.deps.mk  02.test_and_coverage.mk  10.python.mk  50.docker.mk  99.info.mk
mydict/: __init__.py
mydict/csv/: __init__.py
myexec/: __init__.py
myobj/: __init__.py
myversion/: __init__.py
tests/: test_sample.py
tests/mydict/: test_mydict_00_init.py  test_mydict_10_add.py  test_mydict_11_add_list.py  test_mydict_20_get.py  test_mydict_21_get_in_list.py  test_mydict_50_int_sorted_keys.py  test_mydict_51_str_sorted_keys.py  test_mydict_80_file.py
tests/myexec/: test_myexec_01_no_input.py  test_myexec_02_input.py  test_myexec_05_output_str.py  test_myexec_06_output_bin.py  test_myexec_10_ls_with_shell.py  test_myexec_11_ls_wo_shell.py  test_myexec_12_faulty_ls.py  test_myexec_20_timeout.py
tests/myobj/: test_myobj_01_none.py  test_myobj_02_int.py  test_myobj_03_float.py  test_myobj_04_complex.py  test_myobj_05_list.py  test_myobj_06_dict.py  test_myobj_07_class.py  test_myobj_08_str.py  test_myobj_09_bytes.py  test_myobj_10_tuple.py  test_myobj_11_range.py  test_myobj_12_set.py  test_myobj_13_frozenset.py  test_myobj_14_bool.py  (+1 more)
(+33 files in other folders)
