[tool.poetry]
name = "dev-python"
version = "0.1.0"
description = "desc"
authors = ["Arnaud Valmary <github@valmary.eu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "6.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "==6.0.0"
autopep8 = "==2.0.2"
isort = "==5.12.0"
pytest = "==7.2.2"
pytest-cov = "==4.0.0"
pycobertura = "==3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
