[tool.poetry]
name = "dev-python"
version = "0.1.0"
description = "desc"
authors = ["Arnaud Valmary <github@valmary.eu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "6.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

# https://flake8.pycqa.org/en/latest/
flake8 = "==7.1.1"

# https://github.com/hhatto/autopep8/blob/main/README.rst
autopep8 = "==2.3.2"

# https://pycqa.github.io/isort/
isort = "==5.13.2"

# https://docs.pytest.org/en/stable/how-to/usage.html
pytest = "==8.3.4"

# https://coverage.readthedocs.io/en/latest/
coverage = "==7.6.10"

# pytest-cov = "==4.0.0"
# pycobertura = "==3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
